--- a/style.css
+++ b/style.css
@@ -26,10 +26,13 @@ span {
 
 
 @keyframes maquina {
-    from {
+    0%{
         width: 100%;
     }
-    to {
+    50% {
+        width: 50%;
+    }
+    100% {
         width: 0;
     }
 }
